# mpi-sanitizer

./: .gitignore  CMakeLists.txt  DESIGN.md  EVALUATION.md  IMPLEMENTATION.md  MPISan_Explanation.html  README.md  build.sh  evaluate_lulesh.sh  mpisan-cxx.sh  run.sh
Jacobi_MPI/: evaluate_jacobi.sh  jacobi_buggy_aliasing  jacobi_buggy_aliasing.cpp  jacobi_buggy_mismatch  jacobi_buggy_mismatch.cpp  jacobi_clean  jacobi_clean.cpp
docs/: DESIGN.md  EVALUATION.md  IMPLEMENTATION.md
pass/: CMakeLists.txt  MPISanPass.cpp
runtime/: mpisan_rt.cpp
src/pass/: MPISanPass.cpp
src/runtime/: CMakeLists.txt  mpisan_rt.cpp  mpisan_rt.h
testcases/: generate_tests.py
tests/: test_01_clean.cpp  test_02_null_buffer.cpp  test_03_send_to_self.cpp  test_04_type_mismatch.cpp  test_05_buffer_aliasing.cpp  test_06_mismatched_collectives.cpp  test_07_clean_collectives.cpp  test_08_async_write_aliasing.cpp  test_09_deadlock_circular.cpp  test_10_recv_null.cpp  test_11_clean_async.cpp  test_12_type_mismatch_recv_large.cpp  test_13_isend_null.cpp  test_14_irecv_null.cpp  test_15_clean_reduce.cpp
